--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <title></title>
 <body>
-<script src="./GPUFluid-1.3.js"></script>
+<script src="./GPUFluid.js"></script>
 <script>IOHP2();</script>
 
 <canvas></canvas>
